# VeeamPhaser-ci-test

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: veeam_file_format.md  veeamphaser_usage.md
scripts/: parse_vbk.py
scripts/patches/: lz4_decompress_return_consumed_bytes.patch
scripts/ruby/: Gemfile  dissect_vbk.rb  scan.rb
scripts/ruby/lib/veeam/: mft_digests.rb  vbk.rb
scripts/ruby/lib/veeam/vbk/: bank.rb  blocks.rb  dir_items.rb  file_header.rb  meta_blob.rb  meta_vec2.rb  page.rb  page_stack.rb  pretty_format.rb  props_dictionary.rb  slot.rb
src/: main.cpp
src/Veeam/: VBK.hpp
src/Veeam/VBK/: CBank.hpp  CPageStack.hpp  CSlot.hpp  FileHeader.hpp  SDirItemRec.hpp  SFibBlockDescriptorV7.hpp  SKeySetRec.hpp  SMetaTableDescriptor.hpp  SPatchBlockDescriptorV7.hpp  SRestoreRecBlob.hpp  digest_t.hpp
src/commands/: BlocksCommand.cpp  BlocksCommand.hpp  CRC32Command.cpp  CRC32Command.hpp  CarveCommand.cpp  CarveCommand.hpp  Command.hpp  MDCommand.cpp  MDCommand.hpp  MetaProcessCommand.cpp  MetaProcessCommand.hpp  ProcessCarverCommand.cpp  ProcessCarverCommand.hpp  RepoCommand.cpp  RepoCommand.hpp  Scan2Command.cpp  Scan2Command.hpp  ScanCommand.cpp  ScanCommand.hpp  TOCCommand.cpp  TOCCommand.hpp  TestCommand.cpp  TestCommand.hpp  VBKCommand.cpp  VBKCommand.hpp
src/core/: CMeta.cpp  CMeta.hpp  Veeam.hpp  buf_t.cpp  buf_t.hpp  structs.hpp
src/data/: BitFileMappedArray.hpp  HashTable.cpp  HashTable.hpp  RepoIndexer.cpp  RepoIndexer.hpp  lru_set.hpp
src/io/: Errorlogger.cpp  Errorlogger.hpp  Logger.cpp  Logger.hpp  Reader.cpp  Reader.hpp  Writer.cpp  Writer.hpp
src/processing/: Carver.cpp  Carver.hpp  ExtractContext.cpp  ExtractContext.hpp  FileTestInfo.cpp  FileTestInfo.hpp  MD5.cpp  MD5.hpp  Meta_process.cpp  Meta_process.hpp  Process_carver.cpp  Process_carver.hpp
src/scanning/: DblBufScanner.hpp  Scanner.cpp  Scanner.hpp  ScannerV2.cpp  ScannerV2.hpp
src/utils/: Progress.cpp  Progress.hpp  common.cpp  common.hpp  crypto.cpp  crypto.hpp  hexdump.c  hexdump.cpp  hexdump.hpp  timezone_hack.c  to_hexdump.cpp  to_hexdump.hpp  units.cpp  units.hpp  vcrc32.c  vcrc32.h
tests/: BlockDescriptor_test.cpp  CBank_test.cpp  CMakeLists.txt  MDCommand_test.cpp  PhysPageId_test.cpp  Reader_test.cpp  Scan2Command_test.cpp  Scanner_test.cpp  VBKCommand_vbk_test.cpp  VBKCommand_vib_test.cpp  Writer_test.cpp  common_test.cpp  digest_t_test.cpp  lru_set_test.cpp  md5_test.cpp  test_utils.cpp  test_utils.hpp  units_test.cpp  vblockdesc_test.cpp  vcrc32_test.cpp
tests/fixtures/: 00189000.bank  AgentBack2024-09-16T163946.vbk.csv  AgentBack2024-09-16T163946.vbk.json  AgentBack2024-09-16T164908.vib  hi_comp.vbk.csv  hi_comp_1.csv  hi_comp_2.csv
